# fastapi-graphql

./: .gitignore  README.md  app.py  database.db  pyproject.toml
