[tool.poetry]
name = "lesson_8"
version = "0.1.0"
description = ""
authors = ["Allen8Kane <allen8kane@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
pony = "^0.7.16"
strawberry-graphql = {extras = ["fastapi"], version = "^0.95.1"}
uvicorn = {extras = ["standard"], version = "^0.17.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
